force-app/main/default/objects/Holland_questionnaire__c/Holland_questionnaire__c.object-meta.xml
<CustomObject>
    <label>שאלון הולנד</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>קוד שאלון</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>שאלוני הולנד</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>