force-app/main/default/objects/Holland_questionnaire__c/fields/A11__c.field-meta.xml
<CustomField>
    <fullName>A11__c</fullName>
    <label>11.ליצור גיליון אלקטרוני במחשב - קוד</label>
    <length>3</length>
    <type>Text</type>
</CustomField>