force-app/main/default/objects/Holland_questionnaire__c/fields/A12__c.field-meta.xml
<CustomField>
    <fullName>A12__c</fullName>
    <label>12.לעשות הגהה על מסמכים או טפסים - קוד</label>
    <length>3</length>
    <type>Text</type>
</CustomField>