force-app/main/default/objects/Holland_questionnaire__c/fields/ArtisticProfileScore__c.field-meta.xml
<CustomField>
    <fullName>ArtisticProfileScore__c</fullName>
    <label>ציון סוג טיפוס אמנותי</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>