force-app/main/default/objects/Holland_questionnaire__c/fields/ConventionalProfileScore__c.field-meta.xml
<CustomField>
    <fullName>ConventionalProfileScore__c</fullName>
    <label>ציון סוג טיפוס מנהלתי</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>