force-app/main/default/objects/Holland_questionnaire__c/fields/EnterprisingProfileScore__c.field-meta.xml
<CustomField>
    <fullName>EnterprisingProfileScore__c</fullName>
    <label>ציון סוג טיפוס חברתי</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>