force-app/main/default/objects/Holland_questionnaire__c/fields/InvestigativeProfileScore__c.field-meta.xml
<CustomField>
    <fullName>InvestigativeProfileScore__c</fullName>
    <label>ציון סוג טיפוס חקרני</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>