force-app/main/default/objects/Holland_questionnaire__c/fields/QuestionaireEducation__c.field-meta.xml
<CustomField>
    <fullName>QuestionaireEducation__c</fullName>
    <label>רמת השכלה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ללא תעודת בגרות</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>תעודת בגרות</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>על תיכונית</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>תואר אקדמי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>