force-app/main/default/objects/Holland_questionnaire__c/fields/QuestionedAgeGroup__c.field-meta.xml
<CustomField>
    <fullName>QuestionedAgeGroup__c</fullName>
    <label>גיל</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>עד 25</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>26-40</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>41-55</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>מעל 55</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>