force-app/main/default/objects/Holland_questionnaire__c/fields/QuestionedGender__c.field-meta.xml
<CustomField>
    <fullName>QuestionedGender__c</fullName>
    <label>מין</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>זכר</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>נקבה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>