force-app/main/default/objects/Holland_questionnaire__c/fields/RealisticProfileScore__c.field-meta.xml
<CustomField>
    <fullName>RealisticProfileScore__c</fullName>
    <label>ציון סוג טיפוס ביצועי</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>