force-app/main/default/objects/Holland_questionnaire__c/fields/SocialProfileScore__c.field-meta.xml
<CustomField>
    <fullName>SocialProfileScore__c</fullName>
    <label>ציון סוג טיפוס חברותי</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>