force-app/main/default/objects/Holland_questionnaire__c/fields/X10__c.field-meta.xml
<CustomField>
    <fullName>X10__c</fullName>
    <formula>CASE( A10__c , &apos;1&apos;, &quot;בכלל לא אוהב/ת&quot;
, &apos;2&apos;, &quot;לא אוהב/ת&quot;, 
&apos;3&apos;, &quot;לא בטוח/ה&quot;, 
&apos;4&apos;, &quot;אוהב/ת&quot;,
&apos;5&apos;, &quot;אוהב/ת מאוד&quot;
,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10.לנהל חנות - תשובה</label>
    <type>Text</type>
</CustomField>