force-app/main/default/objects/Holland_questionnaire__c/fields/X12__c.field-meta.xml
<CustomField>
    <fullName>X12__c</fullName>
    <formula>CASE( A12__c , &apos;1&apos;, &quot;בכלל לא אוהב/ת&quot;
, &apos;2&apos;, &quot;לא אוהב/ת&quot;, 
&apos;3&apos;, &quot;לא בטוח/ה&quot;, 
&apos;4&apos;, &quot;אוהב/ת&quot;,
&apos;5&apos;, &quot;אוהב/ת מאוד&quot;
,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12.לעשות הגהה על מסמכים או טפסים - תשובה</label>
    <type>Text</type>
</CustomField>