force-app/main/default/objects/Holland_questionnaire__c/listViews/allHollands.listView-meta.xml
<ListView>
    <fullName>allHollands</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>כל השאלונים</label>
</ListView>